--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -221,6 +221,157 @@ block content
 
     // / Team section
 
+    // Team section
+    section#equipe.section.section--team.team.section-open
+        div.section__icon
+        div.container.section__inner
+                // Team left
+                div.team__left
+                    h2.section__title.heading-2 Notre équipe
+                    div.row.is-multiline.is-mobile.team__left__inner
+                        div.column.is-half-mobile.is-one-third-tablet.team__member.js-team-member(data-member="laurianne")
+                            div.team__member__thumbnail(style="background: url(/assets/images/avatars/photo-laurianne.png) no-repeat center center; background-size: contain;")
+                                div.team__member__thumbnail--hover(style="background: url(/assets/images/avatars/photo-laurianne-hover.png) no-repeat center center; background-size: contain;")
+                            div.team__member__infos
+                                p.name laurianne
+                                p.surname Terrier
+                        div.column.is-half-mobile.is-one-third-tablet.team__member.js-team-member(data-member="laurianne")
+                            div.team__member__thumbnail(style="background: url(/assets/images/avatars/photo-laurianne.png) no-repeat center center; background-size: contain;")
+                                div.team__member__thumbnail--hover(style="background: url(/assets/images/avatars/photo-laurianne-hover.png) no-repeat center center; background-size: contain;")
+                            div.team__member__infos
+                                p.name laurianne
+                                p.surname Terrier
+                        div.column.is-half-mobile.is-one-third-tablet.team__member.js-team-member(data-member="laurianne")
+                            div.team__member__thumbnail(style="background: url(/assets/images/avatars/photo-laurianne.png) no-repeat center center; background-size: contain;")
+                                div.team__member__thumbnail--hover(style="background: url(/assets/images/avatars/photo-laurianne-hover.png) no-repeat center center; background-size: contain;")
+                            div.team__member__infos
+                                p.name laurianne
+                                p.surname Terrier
+                        div.column.is-half-mobile.is-one-third-tablet.team__member.js-team-member(data-member="laurianne")
+                            div.team__member__thumbnail(style="background: url(/assets/images/avatars/photo-laurianne.png) no-repeat center center; background-size: contain;")
+                                div.team__member__thumbnail--hover(style="background: url(/assets/images/avatars/photo-laurianne-hover.png) no-repeat center center; background-size: contain;")
+                            div.team__member__infos
+                                p.name laurianne
+                                p.surname Terrier
+                        div.column.is-half-mobile.is-one-third-tablet.team__member.js-team-member(data-member="laurianne")
+                            div.team__member__thumbnail(style="background: url(/assets/images/avatars/photo-laurianne.png) no-repeat center center; background-size: contain;")
+                                div.team__member__thumbnail--hover(style="background: url(/assets/images/avatars/photo-laurianne-hover.png) no-repeat center center; background-size: contain;")
+                            div.team__member__infos
+                                p.name laurianne
+                                p.surname Terrier
+                        div.column.is-half-mobile.is-one-third-tablet.team__member.js-team-member(data-member="laurianne")
+                            div.team__member__thumbnail(style="background: url(/assets/images/avatars/photo-laurianne.png) no-repeat center center; background-size: contain;")
+                                div.team__member__thumbnail--hover(style="background: url(/assets/images/avatars/photo-laurianne-hover.png) no-repeat center center; background-size: contain;")
+                            div.team__member__infos
+                                p.name laurianne
+                                p.surname Terrier
+                    div.section__footer.section__choices
+                        button.btn Et pour finir...
+                    // / Team left
+                // Team right
+                div.team__right.team__cardlist.js-cardlist
+                    div#laurianne.card.js-card
+                        div.container.card__inner
+                            div.row.card__header.is-vcentered
+                                div.column.card__header__left
+                                    p.card__heading Laurianne Terrier
+                                    p.card__teasing Développeuse
+                                div.column.card__header__center
+                                    img.card__thumbnail(src="/assets/images/avatars/photo-laurianne-fiche.png" alt="laurianne terrier")
+                                div.column.card__header__right
+                                    p.card__heading Exp
+                                    p.card__teasing Expérience <br/> professionnelle
+                                    div.card__gauge
+                                        div.card__gauge__inner(style="width: 40%;")
+                            di.card__body
+                                p.card__heading-2 Caracteristiques physiques
+                                    span.card__heading-2__border
+                                div.card__container.row.is-multiline.is-mobile
+                                    div.column.is-half
+                                        div.row.is-mobile
+                                            div.column.is-three-quarters
+                                                p.card__heading int
+                                                p.card__teasing Intelligence
+                                            div.column
+                                                p.card__heading 3
+                                    div.column.is-half
+                                        div.row.is-mobile
+                                            div.column.is-three-quarters
+                                                p.card__heading cha
+                                                p.card__teasing charisme
+                                            div.column
+                                                p.card__heading 4
+                                    div.column.is-half
+                                        div.row.is-mobile
+                                            div.column.is-three-quarters
+                                                p.card__heading sag
+                                                p.card__teasing sagesse
+                                            div.column
+                                                p.card__heading 1
+                                    div.column.is-half
+                                        div.row.is-mobile
+                                            div.column.is-three-quarters
+                                                p.card__heading end
+                                                p.card__teasing endurance
+                                            div.column
+                                                p.card__heading 2
+                            div.card__footer
+                                p.card__heading-2 Competences
+                                    span.card__heading-2__border
+                                div.card__container
+                                    div.row.is-mobile.skill__item
+                                        div.column.is-half
+                                            p.card__heading-3 Astuce
+                                        div.column.is-half.skill__boxes
+                                            div.skill__box.skill__box--checked
+                                            div.skill__box.skill__box--checked
+                                            div.skill__box
+                                            div.skill__box
+                                            div.skill__box
+                                    div.row.is-mobile.skill__item
+                                        div.column.is-half
+                                            p.card__heading-3 Erudition
+                                        div.column.is-half.skill__boxes
+                                            div.skill__box.skill__box--checked
+                                            div.skill__box.skill__box--checked
+                                            div.skill__box
+                                            div.skill__box
+                                            div.skill__box
+                                    div.row.is-mobile.skill__item
+                                        div.column.is-half
+                                            p.card__heading-3 Investigation
+                                        div.column.is-half.skill__boxes
+                                            div.skill__box.skill__box--checked
+                                            div.skill__box.skill__box--checked
+                                            div.skill__box
+                                            div.skill__box
+                                            div.skill__box
+                                    div.row.is-mobile.skill__item
+                                        div.column.is-half
+                                            p.card__heading-3 Art
+                                        div.column.is-half.skill__boxes
+                                            div.skill__box.skill__box--checked
+                                            div.skill__box.skill__box--checked
+                                            div.skill__box
+                                            div.skill__box
+                                            div.skill__box
+                                    div.row.is-mobile.skill__item
+                                        div.column.is-half
+                                            p.card__heading-3 Technologie
+                                        div.column.is-half.skill__boxes
+                                            div.skill__box.skill__box--checked
+                                            div.skill__box.skill__box--checked
+                                            div.skill__box
+                                            div.skill__box
+                                            div.skill__box
+                                button.card__button.js-card-close
+                                    div.bar
+                                    div.bar
+                                    div.bar
+                // / Team right
+
+    // / Team section
+
     // Contact section
     section#contact.section.section--contact.section-open
         div.section__icon
