--- a/app/00_src/css/04_layout/_header.styl
+++ b/app/00_src/css/04_layout/_header.styl
@@ -12,6 +12,11 @@
         background url(/assets/images/logo.png) no-repeat center center
         background-size contain
 
+    &__inner.container
+        +wide()
+            width 100vw
+            max-width 100%
+
     &__left
         position absolute
 
@@ -19,3 +24,6 @@
         position absolute
         right $gap
         top 4.2rem
+        
+        +wide()
+            right  2 * $gap
