Fix the ghost space

--- a/app/00_src/css/04_layout/_layout.styl
+++ b/app/00_src/css/04_layout/_layout.styl
@@ -7,8 +7,8 @@
         padding 0 (2 * $gap)
 
     +from($desktop)
-        max-width $desktop - (2 * $gap)
-        width $desktop - (2 * $gap)
+        max-width $desktop - (3 * $gap)
+        width $desktop - (3 * $gap)
 
     &.is-fluid
         margin-left $gap
@@ -30,6 +30,6 @@
         max-width $wide - (2 * $gap)
         width $wide - (2 * $gap)
 
-    +from($fullhd)
-        max-width $fullhd - (2 * $gap)
-        width $fullhd - (2 * $gap)
+    +from($wide)
+        max-width $wide - (2 * $gap)
+        width $wide - (2 * $gap)
