--- a/app/00_src/templates/components/_footer.pug
+++ b/app/00_src/templates/components/_footer.pug
@@ -1,4 +1,4 @@
-footer.footer.section.section-open
+footer.footer.section
     div.section__icon
     div.container.section__inner
         nav.footer__menu
