Correct fb button

--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -734,5 +734,5 @@ block content
                 p Si vous voulez poser une question, nous faire part d'un commentaire ou simplement nous suivre:
             div.section__footer.section__choices.js-choices
                 a.btn(href="mailto:laurianne.terrier@yahoo.fr") Envoyez-nous un mail
-                a.btn(href="http://facebook.com") Découvrir nos membres
+                a.btn(href="http://facebook.com") Suivez-nous sur facebook
     // / Contact section
