--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -9,7 +9,7 @@ block extraMarkup
 
 block content
     // banner
-    section#accueil.banner.section.section--dark
+    section#accueil.banner.section.js-section.section--dark
         div.banner__bg
         div.container.banner__inner
             div.banner__header
@@ -22,7 +22,7 @@ block content
     // / banner
 
     // project section
-    section#projet.section.section--project
+    section#projet.section.js-section.section--project
         div.section__icon
         div.container.section__inner
             h2.section__title.heading-2 Notre projet
@@ -40,7 +40,7 @@ block content
     // / project section
 
     // story section
-    section#histoire.section.section--story
+    section#histoire.section.js-section.section--story
         div.section__icon
         div.container.section__inner
             h2.section__title.heading-2 Notre histoire
@@ -56,7 +56,7 @@ block content
 
 
     // philosophy section
-    section#philosophie.section.section--philosophy
+    section#philosophie.section.js-section.section--philosophy
         div.section__icon
         div.container.section__inner
             h2.section__title.heading-2 Notre philosophie
@@ -82,7 +82,7 @@ block content
     // / philosophy section
 
     // Team section
-    section#equipe.section.section--team.team
+    section#equipe.section.js-section.section--team.team
         div.section__icon
         div.container.section__inner
                 // Team left
@@ -726,7 +726,7 @@ block content
     // / Team section
 
     // Contact section
-    section#contact.section.section--contact
+    section#contact.section.js-section.section--contact
         div.section__icon
         div.container.section__inner
             h2.section__title.heading-2 cela vous intéresse?
