--- a/app/00_src/templates/components/_footer.pug
+++ b/app/00_src/templates/components/_footer.pug
@@ -1,7 +1,7 @@
-footer.footer.section
+footer.footer.section.js-section
     div.section__icon
     div.container.section__inner
-        nav.footer__menu
+        nav.footer__menu.js-footer-menu
             ul
                 li.menu-item #[a(href="#accueil") Accueil]
                 li.menu-item #[a(href="#projet") Notre projet]
