--- a/app/00_src/css/01_base/_typography.styl
+++ b/app/00_src/css/01_base/_typography.styl
@@ -57,7 +57,7 @@
     font-size $size-regular - 0.1rem
     letter-spacing 1px
     line-height 2
-    text-shadow 1px 1px 2px #000
+    //text-shadow 1px 1px 3px rgba(0,0,0,0.7)
 
     +tablet()
         font-size $size-regular
