--- a/app/00_src/css/04_layout/_header.styl
+++ b/app/00_src/css/04_layout/_header.styl
@@ -21,9 +21,16 @@
         position absolute
 
     &__right
-        position absolute
+        position fixed
         right $gap
         top 4.2rem
-        
+        opacity 1
+        transition opacity 500ms ease
+
+        &.is-hidden
+            opacity 0
+            pointer-events none
+            transition opacity 500ms ease
+
         +wide()
             right  2 * $gap
