--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -9,7 +9,7 @@ block extraMarkup
 
 block content
     // banner
-    section#accueil.banner.section.js-section.section--dark
+    section#accueil(style="order: 0;").banner.section.js-section.section--dark
         div.banner__bg
         div.container.banner__inner
             div.banner__header
