--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -1,7 +1,7 @@
 extends mixins/_layout
 
 block vars
-    - var bodyClasses = 'tpl-homepage frontpage'
+    - var bodyClasses = 'tpl-homepage frontpage is-loading'
 
 block extraScripts
 
