--- a/app/00_src/templates/T01-homepage.pug
+++ b/app/00_src/templates/T01-homepage.pug
@@ -9,8 +9,9 @@ block extraMarkup
 
 block content
     // banner
-    section#accueil(style="order: 0;").banner.section.js-section.section--dark
-        div.banner__bg
+    section#accueil(style="order: 0;").banner.section.js-section.js-banner.section--dark
+        div.banner__bg.js-banner-bg
+        div.banner__fg.js-banner-fg
         div.container.banner__inner
             div.banner__header
                 p.banner__title.heading-1 Bienvenue
